--- a/app/src/main/res/layout/activity_add_transaction.xml
+++ b/app/src/main/res/layout/activity_add_transaction.xml
@@ -24,8 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingHorizontal="20dp"
-        android:layout_below="@id/tvAddTitle"
-        android:layout_above="@id/bottomNavigation">
+        android:layout_below="@id/tvAddTitle">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -157,17 +156,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-    <!-- ===================== BOTTOM NAVIGATION ===================== -->
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigation"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/bg_bottom_nav"
-        app:itemIconTint="@color/selector_nav_color"
-        app:itemTextColor="@color/selector_nav_color"
-        app:menu="@menu/menu_bottom"/>
 
 </RelativeLayout>
