--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.FinMate" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.FinMate" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,14 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="bottomNavigationStyle">@style/Widget.FinMate.BottomNavigationView</item>
+    </style>
+
+    <style name="Widget.FinMate.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:background">@drawable/bg_bottom_nav</item>
+        <item name="itemIconTint">@color/selector_nav_color</item>
+        <item name="itemTextColor">@color/selector_nav_color</item>
+        <item name="menu">@menu/menu_bottom</item>
+        <item name="labelVisibilityMode">labeled</item>
     </style>
 </resources>
