--- a/app/src/main/res/drawable/ic_bill.xml
+++ b/app/src/main/res/drawable/ic_bill.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M6,2h12a2,2 0 0 1 2,2v16l-4,-2l-4,2l-4,-2l-4,2V4a2,2 0 0 1 2,-2zm2,5h8v2H8V7zm0,4h8v2H8v-2z"/>
+</vector>
