--- a/app/src/main/res/drawable/ic_business.xml
+++ b/app/src/main/res/drawable/ic_business.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M4,3h16v18H4V3zm4,2v3h8V5H8zm0,5v3h8v-3H8zm0,5v3h8v-3H8z"/>
+</vector>
