--- a/app/src/main/res/drawable/ic_electricbill.xml
+++ b/app/src/main/res/drawable/ic_electricbill.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M13,2l-9,12h7l-1,8 9,-12h-7l1,-8z" />
+</vector>
