--- a/app/src/main/res/drawable/ic_pet.xml
+++ b/app/src/main/res/drawable/ic_pet.xml
@@ -1,4 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</selector>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M5,8a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zM19,8a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zM12,14c4,0 7,2 7,4v2H5v-2c0,-2 3,-4 7,-4z" />
+</vector>
