--- a/app/src/main/res/layout/bottom_sheet_group.xml
+++ b/app/src/main/res/layout/bottom_sheet_group.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:background="#1A1F2E"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvIncomeGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Thu nhập"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:padding="16dp" />
+
+    <TextView
+        android:id="@+id/tvExpenseGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Chi tiêu"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:padding="16dp" />
+
+</LinearLayout>
