--- a/app/src/main/res/layout/item_category_list.xml
+++ b/app/src/main/res/layout/item_category_list.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="72dp"
     android:orientation="horizontal"
     android:gravity="center_vertical"
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="10dp"
+    android:layout_marginBottom="10dp"
     android:background="@drawable/bg_category_item"
-    android:padding="12dp"
-    android:layout_marginBottom="10dp">
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imgIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_food" />
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_food"
+        android:tint="#65C18C" />
 
     <TextView
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
         android:text="Thực phẩm"
         android:textColor="#000000"
-        android:textSize="16sp"
-        android:layout_marginStart="14dp" />
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
